--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head>
+<html><head><!-test-!>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
