Added We will be closed on Memorial day, sorry for any inconvenience.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/sweetalert2.css">
     <script type="text/javascript" src="js/addDrinksofTheMonth.js"></script>
-    
+
     </head><body>
+        <script>
+    swal(
+  'Memorial day',
+  'We will be closed on Memorial day, sorry for any inconvenience.',
+  'warning'
+)
+    </script>
         <div class="cover">
             <div class="background-image-fixed cover-image" style="background-image : url('img/home-bg.png')"></div>
             <div class="container">
