--- a/index.html
+++ b/index.html
@@ -270,13 +270,9 @@
                 <div class="col-md-6">
                     <h1 class="text-warning">Hour of Operation</h1>
                     <ol class="lead list-unstyled">
-                        <li>
-                            <!-- <strong>Monday—Friday:</strong>&nbsp;10:00 am—8:00 pm</li>-->
-                        </li>
-                        <li>
-                            <strong>Regular Hours : April&nbsp;—&nbsp;October</strong>
-                        </li>
+                        <li><!--<li><strong>Regular Hours : April&nbsp;—&nbsp;October</strong></li>-->
                     </ol>
+                    <!--
                     <ul class="list-group text-left">
                         <li class="list-group-item">
                             <strong>Open Everyday</strong>&nbsp;</li>
@@ -285,6 +281,7 @@
                             <br>
                             <strong>Wednesday to Sunday:</strong>11:00am—8:00pm</li>
                     </ul>
+-->
                     <ol class="lead list-unstyled">
                         <li>
                             <strong>Winter Hours : November&nbsp;—&nbsp;March</strong>
