--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/sweetalert2.min.js"></script>
-        <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Fredoka+One" rel="stylesheet" type="text/css">
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <link href="style/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="style/css.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/sweetalert2.css">
     <script type="text/javascript" src="js/addDrinksofTheMonth.js"></script>
 
     </head><body>
-       
+
         <div class="cover">
             <div class="background-image-fixed cover-image" style="background-image : url('img/home-bg.png')"></div>
             <div class="container">
@@ -333,6 +333,6 @@
                 </div>
             </footer>
         </div>
-    
+
 
 </body></html>
