--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/sweetalert2.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <link href="style/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="style/css.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/sweetalert2.css">
