--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="style/css.css" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Lato:400,900|Fredoka+One" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Fredoka+One" rel="stylesheet" type="text/css">
+
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/sweetalert2.css">
     <script type="text/javascript" src="js/addDrinksofTheMonth.js"></script>
