--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <script type="text/javascript" src="js/addDrinksofTheMonth.js"></script>
 
     </head><body>
-
+<script>swal({
+  html:"<h2 style='color:#3a9f63'>Try Our New Sago Drinks!</h2><p style='color:'>You'll be sure to love them.<br><br><br><br><br></p>",
+	background: 'url(img/Sago.jpg)',
+customClass: "imageContain"
+})</script>
         <div class="cover">
             <div class="background-image-fixed cover-image" style="background-image : url('img/home-bg.png')"></div>
             <div class="container">
