Updated Hours Again

--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ customClass: "imageContain"
                         <li>
                             <!-- <strong>Monday—Friday:</strong>&nbsp;10:00 am—8:00 pm</li>-->
                         </li>
-                        <li>
-                            <strong>Friday—Sunday:</strong>&nbsp;10:30 am—6:00 pm</li>
+                       <!-- <li>
+                            <!--<strong>Friday—Sunday:</strong>&nbsp;10:30 am—6:00 pm</li>-->
                     </ol>
                     <ul class="list-group text-left">
                         <li class="list-group-item">
@@ -285,9 +285,11 @@ customClass: "imageContain"
                         <li class="list-group-item">
                             <strong>Open Everyday</strong>&nbsp;</li>
                         <li class="list-group-item">
-                            <strong>Monday &amp; Tuesday:</strong>2:30pm—6:00pm&nbsp;
+                            <strong>Monday &amp; Tuesday:</strong> 2:30pm—6pm&nbsp;
                             <br>
-                            <strong>Wednesday to Sunday:</strong>11:00am—8:00pm</li>
+                            <strong>Wednesday — Saturday:</strong> 11am—8pm
+                        <br>
+                            <strong>Sunday:</strong> 12pm—8pm</li>
                     </ul>
 <!--
                     <ol class="lead list-unstyled">
