--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                             <h4>Toppings</h4>
                             <li>Tapioca Bobas</li>
                             <li>Lychee Jelly</li>
-                            <li>Mango Jelly</li>
                             <li>Mix Jelly</li>
                             <li>Coffee Jelly</li>
+                            <li>Yogurt Pop Bobas</li>
                             <li>Passion Fruit Pop Bobas</li>
                             <li>Pomegranate Pop Bobas</li>
                         </ol>
@@ -209,7 +209,6 @@
                     <div class="col-md-3 col-2">
                         <h4 contenteditable="true">Yogurt Snow - $4.95</h4>
                         <ol class="list-unstyled">
-                            <li>Avocado</li>
                             <li>Cantaloupe</li>
                             <li>Mango</li>
                             <li>Peach</li>
