--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
                     <div class="col-md-2 col-2">
                         <ol class="list-unstyled">
                             <h4>Toppings</h4>
+                            <li>NEW *Aloe Vera*</li>
                             <li>Tapioca Bobas</li>
                             <li>Lychee Jelly</li>
-                            <li>Mix Jelly</li>
+                            <li>Rainbow Jelly</li>
                             <li>Coffee Jelly</li>
-                            <li>Yogurt Pop Bobas</li>
                             <li>Passion Fruit Pop Bobas</li>
                             <li>Pomegranate Pop Bobas</li>
                         </ol>
@@ -317,7 +317,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6">
-                            <a class="btn btn-block btn-lg btn-warning" href="http://53tcourier.com/restaurants/bobacha/">Click Here to Deliver Now!</a>
+                            <a class="btn btn-block btn-lg btn-warning">Call now at (513) 421-9111!</a>
                         </div>
                         <div class="col-sm-6">
                             <div class="row">
@@ -329,9 +329,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 hidden-xs text-right">
-                                    <a href="https://instagram.com/bobacha/"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-                                    <a href="https://www.facebook.com/pages/Boba-Cha/1454961638099720?skip_nax_wizard=true&amp;ref_type=sitefooter"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-                                    <a href="https://twitter.com/bobachaonmain"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
+                                    <ahref="https://www.facebook.com/bobachaonmain/?hc_ref=ARRJ5d_mxLFNZ4y_bEzqyZnKhWChz6b2yju7hegRkKyhpCVPWbFI81LVWzTIOw9wc7A&fref=nf"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
+                                    <a href="https://www.yelp.com/biz/boba-cha-cincinnati"><i class="fa fa-3x fa-fw fa-yelp text-inverse"></i></a>
+                                    <a href="https://www.instagram.com/bobacha_otr/"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
                                 </div>
                             </div>
                         </div>
