--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a href="https://www.facebook.com/bobachaonmain/" style="float:left;padding-right:5px;color:black">|<i class="fa fa-facebook fa-fw text-info"></i>|</a>
-                            <a href="https://www.instagram.com/bobacha/" style="float:left;padding-left:5px;color:black">|<i class="fa fa-fw fa-instagram text-warning"></i>|</a>
+                            <a href="https://www.instagram.com/bobacha_otr/" style="float:left;padding-left:5px;color:black">|<i class="fa fa-fw fa-instagram text-warning"></i>|</a>
                         </li>
                     </ul>
                     <a class="navbar-left navbar-text">(513) 421-9111</a>
@@ -268,12 +268,12 @@
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <h1 class="text-warning">Hour of Operation</h1>
+                    <h1 class="text-warning">Hours of Operation</h1>
                     <ol class="lead list-unstyled">
                         <li><!--<li><strong>Regular Hours : April&nbsp;—&nbsp;October</strong></li>-->
                     </ol>
                     
-                    <ul class="list-group text-left">
+                <!---- <ul class="list-group text-left">
                         <li class="list-group-item">
                             <strong>Open Everyday</strong>&nbsp;</li>
                         <li class="list-group-item">
@@ -282,9 +282,8 @@
                             <strong>Wednesday — Saturday:</strong> 11am—8pm
                         <br>
                             <strong>Sunday:</strong> 12pm—8pm</li>
-                    </ul>
-<!--
-                    <ol class="lead list-unstyled">
+                    </ul> -->
+<!--comment here-->                    <ol class="lead list-unstyled">
                         <li>
                             <strong>Winter Hours : November&nbsp;—&nbsp;March</strong>
                         </li>
@@ -294,7 +293,7 @@
                             <strong>Open Friday to Sunday</strong>&nbsp;</li>
                         <li class="list-group-item">10:30am—6:00pm</li>
                     </ul>
-                    -->
+                <!--end comment here-->
                 </div>
             </div>
             <div class="section">
