--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html><head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+        <meta name="viewport" content="width=device-width">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/sweetalert2.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -325,7 +326,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 hidden-xs text-right">
-                                    <ahref="https://www.facebook.com/bobachaonmain/?hc_ref=ARRJ5d_mxLFNZ4y_bEzqyZnKhWChz6b2yju7hegRkKyhpCVPWbFI81LVWzTIOw9wc7A&fref=nf"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
+                                    <a href="https://www.facebook.com/bobachaonmain/"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
                                     <a href="https://www.yelp.com/biz/boba-cha-cincinnati"><i class="fa fa-3x fa-fw fa-yelp text-inverse"></i></a>
                                     <a href="https://www.instagram.com/bobacha_otr/"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
                                 </div>
