--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html><head>
         <meta charset="utf-8">
-        <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/sweetalert2.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
