--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head> <!--this is index-->
+<html><head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
