I've done things... oops

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Fredoka+One" rel="stylesheet" type="text/css">
 
         <script src="analytics.js"></script>
+        <meta name="description" content="Official BobaCha Website with up-to-date Items and Prices">
     
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/sweetalert2.css">
