--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html><head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta proprty="og:title" content="Bobacha in Over the Rhine ~ Cincinnati, Ohio">
-        <meta name="keywords" content="bobacha, boba cha, bubble tea cincinnati, bubble tea, boba tea, boba, bubble tea near me, cha, boba tea near me, tea, boba near me, milk tea, cha cha, bubble, bubble guys, tea shop, bubbles">
+        <meta property="title" content="Bobacha in Over the Rhine ~ Cincinnati, Ohio">
         <meta name="description" content="BobaChaOTR Official Website located in Cincinnati,Ohio">
-        <meta property="og:description" content="BobaChaOTR Official Website located in Cincinnati,Ohio">
+        <meta name="keywords" content="bobacha, boba cha, bubble tea cincinnati, bubble tea, boba tea, boba, bubble tea near me, cha, boba tea near me, tea, boba near me, milk tea, cha cha, bubble, bubble guys, tea shop, bubbles">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/sweetalert2.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
