--- a/index.html
+++ b/index.html
@@ -171,39 +171,46 @@
                         <h2 class="text-success">Bubble Tea Toppings</h2>
                     </div>
                 </div>
-                    <div class="col-md-2 col-2">
+                    <div class="col-md-3 col-2">
                         <ol class="list-unstyled">
                             <li>Tapioca Bobas</li>
+                            <li><img src="boba.png" alt="Tapioca Bobas" height="150" width="240"></li>
                         </ol>
                     </div>
-                        <div class="col-md-2 col-2">
+                        <div class="col-md-3 col-2">
                             <ol class="list-unstyled">
                                 <li>Lychee Jelly</li>
+                                <li><img src="ly_jel.png" alt="Lychee Jelly" height="150" width="240"></li>
                             </ol>
                         </div>     
-                            <div class="col-md-2 col-2">
+                            <div class="col-md-3 col-2">
                                 <ol class="list-unstyled">
                                     <li>Rainbow Jelly</li>
+                                    <li><img src="rj.png" alt="Rainbow Jelly" height="150" width="240"></li>
                                 </ol>
                                 </div>
-                            <div class="col-md-2 col-2">
+                            <div class="col-md-3 col-2">
                                 <ol class="list-unstyled">
                                     <li>Coffee Jelly</li>
+                                    <li><img src="coffee_jel.png" alt="Coffe Jelly" height="150" width="240"></li>
                                 </ol>
                             </div>                       
-                        <div class="col-md-2 col-2">
+                        <div class="col-md-3 col-2">
                             <ol class="list-unstyled">
                                 <li>Passionfruit Pop Bobas</li>
+                                <li><img src="pass_pop.png" alt="Passionfruit Pop Bobas" height="150" width="240"></li>
                             </ol>
                         </div>
-                    <div class="col-md-2 col-2">
+                    <div class="col-md-3 col-2">
                         <ol class="list-unstyled">
                             <li>Pomegranate Pop Bobas</li>
+                            <li><img src="pom_pop.png" alt="Pomegranate Pop Bobas" height="150" width="240"></li>
                         </ol>
                     </div>
-                    <div class="col-md-offset-5 col-2">
+                    <div class="col-md-5 col-2">
                         <ol class="list-unstyled">
                             <li>*NEW* Yogurt Pop Bobas</li>
+                            <li><img src="yo_pop.png" alt="Yogurt Pop Bobas" height="150" width="240"></li>
                         </ol>
                     </div>
                 </div>
