aight, new year

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Sorry! This Webpage is under construction!</h1>
     </div>
         <div class="col-md-6 text-center">
-            <p>Use <a href="https://bobachaotr.business.site/">this website</a> instead to see all of our Flavors and Prices!</p>
+            <p>Use <a href="https://bobachaotr.business.site/">this website</a> instead to see our menu!</p>
     </div>
 -->
 <!-- Introduction: Cover and Parallax -->
@@ -43,7 +43,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 text-center  text-inverse">
-                        <img src="img/logo-home-static.png" class="center-block img-responsive">
+                        <img src="img/logo-home-static.png" class="center-block img-responsive" alt="BobaCha Logo">
                         <p contenteditable="false">
                             <br>is bringing Cincinnati`s favorite Taiwanese drink to the urban core: bubble
                             tea."
@@ -64,17 +64,11 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">Boba Cha</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-ex-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="https://www.facebook.com/bobachaonmain" style="float:left;padding-right:5px;color:black">|<i class="fa fa-facebook fa-fw text-info"></i>|</a>
-                            <a href="https://www.instagram.com/bobacha_otr/" style="float:left;padding-left:5px;color:black">|<i class="fa fa-fw fa-instagram text-warning"></i>|</a>
-                        </li>
                     </ul>
                     <a class="navbar-left navbar-text">(513) 421-9111</a>
                 </div>
@@ -160,12 +154,12 @@
             </div>
         </div>
 <div class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <hr>
-                    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <hr>
                 </div>
+            </div>
                 <div class="row">
                     <div class="col-md-12">
                         <h2 class="text-success">Bubble Tea Toppings</h2>
@@ -177,42 +171,56 @@
                             <li><img src="boba.png" alt="Tapioca Bobas" height="150" width="240"></li>
                         </ol>
                     </div>
-                        <div class="col-md-3 col-2">
-                            <ol class="list-unstyled">
-                                <li>Lychee Jelly</li>
-                                <li><img src="ly_jel.png" alt="Lychee Jelly" height="150" width="240"></li>
-                            </ol>
-                        </div>     
-                            <div class="col-md-3 col-2">
-                                <ol class="list-unstyled">
-                                    <li>Rainbow Jelly</li>
-                                    <li><img src="rj.png" alt="Rainbow Jelly" height="150" width="240"></li>
-                                </ol>
-                                </div>
-                            <div class="col-md-3 col-2">
-                                <ol class="list-unstyled">
-                                    <li>Coffee Jelly</li>
-                                    <li><img src="coffee_jel.png" alt="Coffe Jelly" height="150" width="240"></li>
-                                </ol>
-                            </div>                       
-                        <div class="col-md-3 col-2">
-                            <ol class="list-unstyled">
-                                <li>Passionfruit Pop Bobas</li>
-                                <li><img src="pass_pop.png" alt="Passionfruit Pop Bobas" height="150" width="240"></li>
-                            </ol>
-                        </div>
+				<!-- Passionfruit Pop Bobas -->
+                    <div class="col-md-3 col-2">
+                     	<ol class="list-unstyled">
+                        	<li>Passionfruit Pop Bobas</li>
+                            <li><img src="pass_pop.png" alt="Passionfruit Pop Bobas" height="150" width="240"></li>
+                        </ol>
+                    </div>
+				<!-- Pomegranate Pop Bobas -->
                     <div class="col-md-3 col-2">
                         <ol class="list-unstyled">
                             <li>Pomegranate Pop Bobas</li>
                             <li><img src="pom_pop.png" alt="Pomegranate Pop Bobas" height="150" width="240"></li>
                         </ol>
                     </div>
+				<!-- Yogurt Pop Bobas
                     <div class="col-md-5 col-2">
                         <ol class="list-unstyled">
-                            <li>*NEW* Yogurt Pop Bobas</li>
+                            <li>Yogurt Pop Bobas</li>
                             <li><img src="yo_pop.png" alt="Yogurt Pop Bobas" height="150" width="240"></li>
                         </ol>
                     </div>
+				-->
+				<!-- Lychee Jelly -->
+                    <div class="col-md-3 col-2">
+                    	<ol class="list-unstyled">
+                        	<li>Lychee Jelly</li>
+                            <li><img src="ly_jel.png" alt="Lychee Jelly" height="150" width="240"></li>
+                        </ol>
+                    </div>
+				<!-- Rainbow Jelly -->
+                    <div class="col-md-3 col-2">
+                    	<ol class="list-unstyled">
+                        	<li>Rainbow Jelly</li>
+                            <li><img src="rj.png" alt="Rainbow Jelly" height="150" width="240"></li>
+                        </ol>
+                    </div>
+				<!-- Coffee Jelly -->
+                    <div class="col-md-3 col-2">
+                        <ol class="list-unstyled">
+                            <li>Coffee Jelly</li>
+                            <li><img src="coffee_jel.png" alt="Coffe Jelly" height="150" width="240"></li>
+                        </ol>
+                    </div>
+				<!-- Mango Jelly -->
+                    <div class="col-md-3 col-2">
+                        <ol class="list-unstyled">
+                            <li>Coffee Jelly</li>
+                            <li><img src="mango_jelly.jpg" alt="Mango Jelly" height="190" width="275"></li>
+                        </ol>
+                    </div>  
                 </div>
             </div>
         <div class="section">
@@ -302,10 +310,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="img/cakked-boba.jpg" class="img-responsive">
+                        <img src="img/cakked-boba.jpg" class="img-responsive" alt="Bubble Tea">
                     </div>
                     <div class="col-md-6">
-                        <h1>Come Visit Us and Experience the Historical Attribute of Over The Rhine</h1>
+                        <h1>Come Visit Us and Experience the Historical Attribute of OTR</h1>
                     </div>
                 </div>
             </div>
@@ -322,7 +330,7 @@
                             <strong>Phone number:</strong>&nbsp;(513) 421-9111</li>
                         <li class="list-group-item">
                             <i class="fa fa-at fa-fw fa-lg text-success"></i>
-                            <strong>Email address:&nbsp;</strong>inyed@yahoo.com</li>
+                            <strong>Email address:&nbsp;</strong>bobachaonmain@gmail.com</li>
                         <li class="list-group-item">
                             <i class="fa fa-fw fa-home fa-lg text-info"></i>
                             <strong>Location:</strong>1606 Main St. Cincinnati, OH 45202</li>
@@ -333,7 +341,7 @@
     <div class="col-md-6">
         <h1 class="text-warning">Hours of Operation</h1>
 
-<!-- Summer Hours -->
+<!-- Summer Hours
                 <ol class="lead list-unstyled">
                         <li><strong>Summer Hours: April&nbsp;—&nbsp;October</strong></li>
                     </ol>
@@ -347,7 +355,8 @@
                             <strong>Sunday:</strong> 12pm—8pm</li>
                     </ul> 
                 </div>
-<!-- Winter Hours
+-->
+<!-- Winter Hours -->
                   <ol class="lead list-unstyled">
                         <li>
                             <strong>Winter Hours: November&nbsp;—&nbsp;March</strong>
@@ -359,7 +368,6 @@
                         <li class="list-group-item">10:30am—6:00pm</li>
                     </ul>
     </div>
--->
 <!-- Map of Directions -->
             <div class="section">
                 <div class="container">
@@ -393,7 +401,7 @@
                                 <div class="col-md-11 hidden-xs text-right">
                                     <a href="https://www.facebook.com/bobachaonmain" target="_blank"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
                                     <a href="https://www.yelp.com/biz/boba-cha-cincinnati" target="_blank"><i class="fa fa-3x fa-fw fa-yelp text-inverse"></i></a>
-                                    <a href=https://www.instagram.com/bobacha_otr/ target="_blank"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
+                                    <a href="https://www.instagram.com/bobacha_otr/ target=" target="_blank"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
                                 </div>
                             </div>
                         </div>
