Making a simpler format

--- a/index.html
+++ b/index.html
@@ -19,24 +19,17 @@
         <div class="cover">
             <div class="background-image-fixed cover-image" style="background-image : url('img/home-bg.png')"></div>
             <div class="container">
-                <div class="row"></div>
-                <div class="row"></div>
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div class="col-md-12 "></div>
-                        <div class="col-md-12 "></div>
-                        <p class="text-center text-inverse">"Located at 1606 Main Street inside a renovated 154 year-old building...</p>
+                    <div class="col-md-12">
+                        <p class="lead bg-inverse text-center text-white text-inverse"></p>
                     </div>
                 </div>
-                <div class="row">
+				<div class="row">
                     <div class="col-md-12 text-center  text-inverse">
                         <img src="img/logo-home-static.png" class="center-block img-responsive">
-                        <p contenteditable="false">
-                            <br>is bringing Cincinnati`s favorite Taiwanese drink to the urban core: bubble
-                            tea."
-                            <br>- Cincinnati Refined</p>
-                        <br>
-                        <br>
+                        <p contenteditable="false">We are opening on May 1st. You can now order online and through text at (513) 421-9111</p>
+						<br>
+						<button><a href="https://squareup.com/store/boba-cha" target="_blank">Order Online Here!</a></button>
                     </div>
                 </div>
                 <div class="row">
@@ -55,17 +48,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Boba Cha</a>
+                    <a class="navbar-brand" href="https://squareup.com/store/boba-cha">Boba Cha</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-ex-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="https://www.facebook.com/bobachaonmain/" style="float:left;padding-right:5px;color:black">|<i class="fa fa-facebook fa-fw text-info"></i>|</a>
-                            <a href="https://twitter.com/bobachaonmain" style="float:left;;color:black">|<i class="fa fa-fw fa-twitter text-success"></i>|</a>
-                            <a href="https://www.instagram.com/bobacha/" style="float:left;padding-left:5px;color:black">|<i class="fa fa-fw fa-instagram text-warning"></i>|</a>
+                            <a href="https://www.facebook.com/bobachaonmain/" style="float:left;padding-right:5px;color:black" target="_blank">|<i class="fa fa-facebook fa-fw text-info"></i>|</a>
+                            <a href="https://twitter.com/bobachaonmain" style="float:left;;color:black" target="_blank">|<i class="fa fa-fw fa-twitter text-success"></i>|</a>
+                            <a href="https://www.instagram.com/bobacha/" style="float:left;padding-left:5px;color:black" target="_blank">|<i class="fa fa-fw fa-instagram text-warning"></i>|</a>
                         </li>
                     </ul>
-                    <a class="navbar-left navbar-text">(513) 421-9111</a>
                 </div>
             </div>
         </div>
@@ -162,11 +154,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <hr>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
                         <h2 class="text-success">Bubble Tea Smoothies</h2>
                     </div>
                 </div>
@@ -218,23 +205,7 @@
                 </div>
             </div>
         </div>
-        <div class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <hr>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2 class="text-success monthFlavors">Flavors of the Month :</h2>
-                    </div>
-                </div>
-                <div class="row text-inverse drinksofthemonth" style="background:black;">
-
-                </div>
-            </div>
-        </div>
+	<hr>
         <div class="section">
             <div class="container">
                 <div class="row">
@@ -264,27 +235,25 @@
                             <strong>Phone number:</strong>&nbsp;(513) 421-9111</li>
                         <li class="list-group-item">
                             <i class="fa fa-at fa-fw fa-lg text-success"></i>
-                            <strong>Email address:&nbsp;</strong>inyed@yahoo.com</li>
+                            <strong>Email address:&nbsp;</strong>bobachaonmain@gmail.com</li>
                         <li class="list-group-item">
                             <i class="fa fa-fw fa-home fa-lg text-info"></i>
                             <strong>Location:</strong>1606 Main St. Cincinnati, OH 45202</li>
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <h1 class="text-warning">Hour of Operation</h1>
+                    <h1 class="text-warning">Hours of Operation</h1>
                     <ol class="lead list-unstyled">
                         <li><!--<li><strong>Regular Hours : April&nbsp;—&nbsp;October</strong></li>-->
                     </ol>
                     
                     <ul class="list-group text-left">
                         <li class="list-group-item">
-                            <strong>Open Everyday</strong>&nbsp;</li>
+							<strong>Monday &amp; Tuesday:</strong> Closed&nbsp;</li>
+						<li class="list-group-item">
+							<strong>Wednesday — Saturday:</strong> 11am—8pm</li>
                         <li class="list-group-item">
-                            <strong>Monday &amp; Tuesday:</strong> 2:30pm—6pm&nbsp;
-                            <br>
-                            <strong>Wednesday — Saturday:</strong> 11am—8pm
-                        <br>
-                            <strong>Sunday:</strong> 12pm—8pm</li>
+							<strong>Sunday:</strong> 12pm—8pm</li>
                     </ul>
 <!--
                     <ol class="lead list-unstyled">
@@ -305,7 +274,7 @@
                     <a class="row" href="order\index.html">
         <div class="col-md-12 text-center">
       </div>
-      </a>
+      	</a>
                     <div class="row">
                         <div class="col-md-12">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1503.7876705311182!2d-84.51227544419459!3d39.11321002258202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8841b3fcb0df5f47%3A0x37b0e6764891ffa5!2sBoba+Cha!5e0!3m2!1sen!2sus!4v1492357972493" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
@@ -313,31 +282,6 @@
                     </div>
                 </div>
             </div>
-            <footer class="section section-success">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <a class="btn btn-block btn-lg btn-warning" href="http://53tcourier.com/restaurants/bobacha/">Click Here to Deliver Now!</a>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="row">
-                                <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
-                                    <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-                                    <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-                                    <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12 hidden-xs text-right">
-                                    <a href="https://instagram.com/bobacha/"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-                                    <a href="https://www.facebook.com/pages/Boba-Cha/1454961638099720?skip_nax_wizard=true&amp;ref_type=sitefooter"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-                                    <a href="https://twitter.com/bobachaonmain"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
         </div>
 
 
