--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-<html><head>
+<!DOCTYPE html><head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
@@ -13,29 +12,22 @@
 
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/sweetalert2.css">
-    <script type="text/javascript" src="js/addDrinksofTheMonth.js"></script>
-
-    </head><body>
-<!---->
+    	<script type="text/javascript" src="js/addDrinksofTheMonth.js"></script>
+	</head><body>
         <div class="cover">
-            <div class="background-image-fixed cover-image" style="background-image : url('img/home-bg.png')"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <p class="lead bg-inverse text-center text-white text-inverse"></p>
-                    </div>
-                </div>
+        	<div class="background-image-fixed cover-image" style="background-image : url('img/home-bg.png')"></div>
+            	<div class="container">
+                	<div class="row">
+                    	<div class="col-md-12">
+                        	<p class="lead bg-inverse text-center text-white text-inverse"></p>
+                    	</div>
+                	</div>
 				<div class="row">
-                    <div class="col-md-12 text-center  text-inverse">
-                        <img src="logo-home-static.png">
-                        <p contenteditable="false">We are opening on May 1st. You can now order online and through text at (513) 421-9111</p>
-						<br>
-						<button><a href="https://squareup.com/store/boba-cha" target="_blank">Order Online Here!</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <p class="lead bg-inverse text-center text-white text-inverse"></p>
+                    <div class="col-md-12 text-center text-inverse">
+                        <img src="logo-home-static.png" alt="BobaCha">
+                        	<p contenteditable="false">We are opening on May 1st. You can now order online and through text at (513) 421-9111</p>
+							<br>
+						<button onclick ="window.location.href = 'https://squareup.com/store/boba-cha'">Order Online Here!</button>
                     </div>
                 </div>
             </div>
@@ -43,12 +35,6 @@
         <div class="custom-nav navbar navbar-default navbar-fixed-top navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
                     <a class="navbar-brand" href="https://squareup.com/store/boba-cha">Boba Cha</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-ex-collapse">
@@ -65,20 +51,13 @@
         <div class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12"></div>
-                </div>
-            </div>
-        </div>
-        <div class="section">
-            <div class="container">
-                <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center text-success">MENU</h1>
                         <h2 class="text-success">Bubble Teas</h2>
                     </div>
                 </div>
                 <div class="row text-inverse" style="background:black;">
-                    <div class="col-md-2 col-2">
+                    <div class="col-md-3 col-3">
                         <h4 contenteditable="true">Fruit Tea - $3.25</h4>
                         <ol class="list-unstyled">
                             <li>Kiwi</li>
@@ -90,7 +69,7 @@
                             <li>Strawberry</li>
                         </ol>
                     </div>
-                    <div class="col-md-2  col-2">
+                    <div class="col-md-3  col-3">
                         <h4>Milk Tea - $3.25</h4>
                         <ol class="list-unstyled">
                             <li>Black</li>
@@ -104,7 +83,7 @@
                             <li>Vanilla</li>
                         </ol>
                     </div>
-                    <div class="col-md-2  col-2">
+                    <div class="col-md-3  col-3">
                         <h4 contenteditable="true">Soy Milk Tea - $3.25</h4>
                         <ol class="list-unstyled">
                             <li>Green</li>
@@ -116,7 +95,7 @@
                             <li>Thai</li>
                         </ol>
                     </div>
-                    <div class="col-md-2 col-2">
+                    <div class="col-md-3 col-3">
                         <h4 contenteditable="true">Sea Salt Milk Tea - $3.75</h4>
                         <ol class="list-unstyled">
                             <li>Coffee</li>
@@ -127,25 +106,13 @@
                             <li>Thai</li>
                         </ol>
                     </div>
-                    <div class="col-md-2 col-2">
+                    <div class="col-md-3 col-3">
                         <ol class="list-unstyled">
                             <h4>Iced Teas w/boba - $2.50</h4>
                             <li>Oolong Tea</li>
                             <li>Golden Tea</li>
                             <li>Thai Tea</li>
                             <li>Jasmine Tea</li>
-                        </ol>
-                    </div>
-                    <div class="col-md-2 col-2">
-                        <ol class="list-unstyled">
-                            <h4>Toppings</h4>
-                            <li>Tapioca Bobas</li>
-                            <li>Lychee Jelly</li>
-                            <li>Mix Jelly</li>
-                            <li>Coffee Jelly</li>
-                            <li>Yogurt Pop Bobas</li>
-                            <li>Passion Fruit Pop Bobas</li>
-                            <li>Pomegranate Pop Bobas</li>
                         </ol>
                     </div>
                 </div>
@@ -209,27 +176,8 @@
 	<hr>
         <div class="section">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="img/cakked-boba.jpg" class="img-responsive">
-                    </div>
-                    <div class="col-md-6">
-                        <h1>Come Visit Us and Experience the Historical Attribute of Over The Rhine</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section">
-            <div class="container">
                 <div class="col-md-6">
                     <h1 class="text-warning">Contact Us</h1>
-                    <ol class="lead list-unstyled">
-                        <li>
-                            <!-- <strong>Monday—Friday:</strong>&nbsp;10:00 am—8:00 pm</li>-->
-                        </li>
-                       <!-- <li>
-                            <!--<strong>Friday—Sunday:</strong>&nbsp;10:30 am—6:00 pm</li>-->
-                    </ol>
                     <ul class="list-group text-left">
                         <li class="list-group-item">
                             <i class="fa fa-fw fa-lg fa-phone text-warning"></i>
@@ -244,10 +192,6 @@
                 </div>
                 <div class="col-md-6">
                     <h1 class="text-warning">Hours of Operation</h1>
-                    <ol class="lead list-unstyled">
-                        <li><!--<li><strong>Regular Hours : April&nbsp;—&nbsp;October</strong></li>-->
-                    </ol>
-                    
                     <ul class="list-group text-left">
                         <li class="list-group-item">
 							<strong>Monday &amp; Tuesday:</strong> Closed&nbsp;</li>
@@ -257,25 +201,17 @@
 							<strong>Sunday:</strong> 12pm—8pm</li>
                     </ul>
 <!--
-                    <ol class="lead list-unstyled">
-                        <li>
-                            <strong>Winter Hours : November&nbsp;—&nbsp;March</strong>
-                        </li>
-                    </ol>
                     <ul class="list-group text-left">
                         <li class="list-group-item">
                             <strong>Open Friday to Sunday</strong>&nbsp;</li>
                         <li class="list-group-item">10:30am—6:00pm</li>
                     </ul>
-                    -->
+-->
                 </div>
             </div>
             <div class="section">
                 <div class="container">
-                    <a class="row" href="order\index.html">
-        <div class="col-md-12 text-center">
-      </div>
-      	</a>
+                    <a class="row" href="order\index.html"></a>
                     <div class="row">
                         <div class="col-md-12">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1503.7876705311182!2d-84.51227544419459!3d39.11321002258202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8841b3fcb0df5f47%3A0x37b0e6764891ffa5!2sBoba+Cha!5e0!3m2!1sen!2sus!4v1492357972493" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
