--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                         <li class="list-group-item">
 							<strong>Monday &amp; Tuesday:</strong> Closed&nbsp;</li>
 						<li class="list-group-item">
-							<strong>Wednesday — Saturday:</strong> 11am—8pm</li>
+							<strong>Wednesday — Sunday:</strong> 11am—6pm</li>
                         <li class="list-group-item">
-							<strong>Sunday:</strong> 12pm—8pm</li>
+							<a href="https://squareup.com/store/boba-cha" target="_blank">Order Online Here!</a></li>
                     </ul>
 <!--
                     <ul class="list-group text-left">
