lets see it this works at all
link to a secure page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="logo-home-static.png" alt="BobaCha">
                         	<p contenteditable="false">We are opening on May 1st. You can now order online and through text at (513) 421-9111</p>
 							<br>
-						<button onclick ="window.location.href = 'https://squareup.com/store/boba-cha'">Order Online Here!</button>
+						<button onclick ="window.location.href = 'https://boba-cha.square.site/'">Order Online Here!</button>
                     </div>
                 </div>
             </div>
