--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><head>
-        <meta charset="utf-8">
+        <meta http-equiv="Refresh"content="0"; url ="https://boba-cha.square.site/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/sweetalert2.min.js"></script>
@@ -24,12 +24,7 @@
                 	</div>
 				<div class="row">
                     <div class="col-md-12 text-center text-inverse">
-                        <img src="logo-home-static.png" alt="BobaCha">
-                        	<p contenteditable="false">We are opening on May 1st. You can now order online and through text at (513) 421-9111</p>
-							<br>
-						<button onclick ="window.location.href = 'https://boba-cha.square.site/'">Order Online Here!</button>
-                    </div>
-                </div>
+                        <img src="img/logo-home-static.png" alt="BobaCha">
             </div>
         </div>
         <div class="custom-nav navbar navbar-default navbar-fixed-top navbar-inverse">
