--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 				<div class="row">
                     <div class="col-md-12 text-center text-inverse">
                         <img src="img/logo-home-static.png" alt="BobaCha">
+					</div>
+				</div>
             </div>
         </div>
         <div class="custom-nav navbar navbar-default navbar-fixed-top navbar-inverse">
