--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><head>
-        <meta http-equiv="Refresh"content="0"; url ="https://boba-cha.square.site/">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/sweetalert2.min.js"></script>
@@ -32,7 +32,7 @@
         <div class="custom-nav navbar navbar-default navbar-fixed-top navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="https://squareup.com/store/boba-cha">Boba Cha</a>
+                    <p class="navbar-brand">Boba Cha</p>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-ex-collapse">
                     <ul class="nav navbar-nav navbar-right">
